what next button added

--- a/src/pages/google/google.html
+++ b/src/pages/google/google.html
@@ -25,4 +25,7 @@
       <ion-icon name="ios-refresh"></ion-icon>
     </button>
   </ion-fab>
+
+    <button ion-button text-center color="danger" id="lodermodal">What Next</button>
+
 </ion-content>
