--- a/src/pages/interestpage/interestpage.html
+++ b/src/pages/interestpage/interestpage.html
@@ -12,7 +12,7 @@
 <ion-content>
     <ion-list>
       <ion-list-header>
-        Characters
+        Interests
       </ion-list-header>
 
       <ion-item *ngFor='let value of interests; trackBy: index;'>
