--- a/src/pages/myinterest/myinterest.html
+++ b/src/pages/myinterest/myinterest.html
@@ -1,18 +1,38 @@
-<!--
-  Generated template for the MyinterestPage page.
-
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
 <ion-header>
-
-  <ion-navbar>
-    <ion-title>myinterest</ion-title>
-  </ion-navbar>
-
+  <ion-toolbar color="app">
+  	<button ion-button menuToggle>
+            <ion-icon name="menu"></ion-icon>
+    </button>
+    <ion-title>
+      Interests
+    </ion-title>
+  </ion-toolbar>
 </ion-header>
 
-
 <ion-content padding>
-
+    <ion-list>
+      <br>
+      <ion-list-header>
+        Your Interest Categories
+      </ion-list-header>
+     
+      <ion-item-sliding *ngFor='let value of interests; trackBy: index;'>
+      	 <ion-item>
+      		<ion-label>{{value.display_name}}</ion-label>
+         </ion-item>
+       
+        <!-- checked="true" -->
+        <ion-item-options>
+            <button ion-button color="danger" icon-start (click)="deleteItem(value.id)">
+                <ion-icon name="trash"></ion-icon>
+                Delete
+            </button>
+        </ion-item-options>
+      </ion-item-sliding>
+  </ion-list>
+  <ion-fab top right edge>
+    <button (click)="addMore()" ion-fab color="secondary">
+      <ion-icon name="md-add" ></ion-icon>
+    </button>
+  </ion-fab>
 </ion-content>
