location and network setting checked

--- a/src/pages/interestpage/interestpage.html
+++ b/src/pages/interestpage/interestpage.html
@@ -22,7 +22,7 @@
       </ion-item>
   </ion-list>
   <ion-fab top right edge>
-    <button (click)="saveInterest()" ion-fab color="danger">
+    <button (click)="saveInterest()" ion-fab color="secondary">
       <ion-icon name="checkmark" ></ion-icon>
     </button>
   </ion-fab>
