--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -7,7 +7,7 @@
   </ion-row>
   <ion-row class="bottom-row">
     <ion-col class="login-button">
-      <button ion-button block (click)="doFbLogin()">Login with Facebook</button>
+      <button ion-button block (click)="doFbLogin()" class="mBottom">Login with Facebook</button>
       <button ion-button block color="danger" (click)="doGoogleLogin()">Sign In with Google</button>
 
       <!-- <button ion-button block (click)="doTwLogin()">Twitter Login</button> -->
