--- a/src/pages/myinterest/myinterest.html
+++ b/src/pages/myinterest/myinterest.html
@@ -11,7 +11,7 @@
 
 <ion-content class="pading-lr">
     <div *ngIf="interests.length ==0" class="no-more-item">
-        <h6>No more Interest available.</h6>
+        <h6>No Interest available.</h6>
     </div>
     <ion-list no-lines class="pading-lr">
         <br>
