--- a/src/pages/lists/lists.html
+++ b/src/pages/lists/lists.html
@@ -21,6 +21,7 @@
         		<img src="{{value.icon}}" style="width: 25px">
         	</ion-icon>
         	{{value.name}}<br>
+             {{value.distance}} Km<br>
         	{{value.type}} {{value.lat}} , {{value.lng}} 
         	
         </ion-item>
